그룹조회 결과 수정.